--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Momentum</title>
 </head>
 <body>
+    <div>
+        <h1 class="12">click me!</h1>
+    </div>
+   
     <script src="app.js"></script>
 </body>
-</html>
+</html> 
