--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Momentum</title>
 </head>
 <body>
-    <div>
-        <h1 class="12">click me!</h1>
-    </div>
-   
+    <form class="" id="login-form">
+        <input required maxlength="10" type="text" placeholder="What is your name?"/>
+        <button>Log In</button>
+    </form>
+    <h1 class="hidden" id="greeting"></h1>
+    <a href="https://nomadcoders.co/">Go to naver</a>
     <script src="app.js"></script>
 </body>
 </html> 
