--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <title>Momentum</title>
 </head>
 <body>
+    <h2 id="clock">00:00</h2>
     <form class="" id="login-form">
         <input required maxlength="10" type="text" placeholder="What is your name?"/>
         <button>Log In</button>
     </form>
-    <h2 id="clock">00:00</h2>
     <h1 class="hidden" id="greeting"></h1>
+    
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do an Press Enter" required />
+    </form>
+    <ul id="todo-list">
+
+    </ul>
     <div id="quote">
         <span></span>
         <span></span>
@@ -23,5 +30,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html> 
