--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
             <span></span>
         </div>
     </div>
+    <div class="linksBox">
+        <h2 class="linksBox__title">お気に入り</h2>
+        <form action="#" class="linksBox__form">
+            <input required type="text" class="linksBox__url-title" placeholder="タイトル" />
+            <input required type="text" class="linksBox__put-link-url" placeholder="URLを入力してください。"/>
+            <input type="submit" value="確認">
+        </form>
+        <div class="linksBox__links">
+        </div>
+    </div>
+    <div class="img">
+        
+    </div>
     
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
@@ -41,5 +54,6 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/links.js"></script>
 </body>
 </html> 
